--- a/package.json
+++ b/package.json
@@ -15,20 +15,21 @@
   "author": "Brinkbit",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Brinkbit/http-fs-node/issues"
+    "url": "https://github.com/Brinkbit/http-fs-permissions/issues"
   },
   "homepage": "https://github.com/Brinkbit/fs-brinkbit-permissions#readme",
   "dependencies": {
     "http-server": "^0.8.5",
     "mongoose": "^4.1.6",
     "mime": "^1.3.4",
-    "fs-s3-mongo": "^0.0.1"
+    "fs-s3-mongo": "joshfttb/fs-s3-mongo"
   },
   "pre-commit": [
     "eslint-pre-commit"
   ],
   "devDependencies": {
     "babel-eslint": "^4.1.3",
+    "brinkbit-style-es6": "^1.0.2",
     "chai": "^3.2.0",
     "chai-as-promised": "^5.1.0",
     "eslint": "^1.6.0",
