--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "http-server": "^0.8.5",
     "mongoose": "^4.1.6",
     "mime": "^1.3.4",
+    "//": "//TODO: need to update this for production",
     "fs-s3-mongo": "joshfttb/fs-s3-mongo"
   },
   "pre-commit": [
