include necessary packages. mocha runs

--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
   },
   "homepage": "https://github.com/Brinkbit/fs-brinkbit-permissions#readme",
   "dependencies": {
-    "http-server": "^0.8.5",
-    "mongoose": "^4.1.6",
-    "mime": "^1.3.4",
     "//": "//TODO: need to update this for production",
-    "fs-s3-mongo": "joshfttb/fs-s3-mongo"
+    "fs-s3-mongo": "joshfttb/fs-s3-mongo",
+    "http-server": "^0.8.5",
+    "mime": "^1.3.4",
+    "mongoose": "^4.3.5"
   },
   "pre-commit": [
     "eslint-pre-commit"
