--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "mocha": "^2.3.2",
     "path": "^0.12.7",
     "pre-commit": "^1.1.1",
+    "ramda": "^0.21.0",
     "sinon": "^1.16.1",
     "sinon-chai": "^2.8.0",
     "supertest": "^1.1.0"
