--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/index.js",
     "eslint-pre-commit": "./scripts/eslint-pre-commit",
-    "test": "grunt"
+    "test": "gulp test"
   },
   "repository": {
     "type": "git",
@@ -37,10 +37,8 @@
     "eslint": "^1.6.0",
     "eslint-config-airbnb": "^0.1.0",
     "eslint-plugin-react": "^3.5.1",
-    "grunt": "^0.4.5",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-eslint": "^17.2.0",
-    "grunt-mocha-test": "^0.12.7",
+    "gulp": "^3.9.1",
+    "gulp-mocha": "^2.2.0",
     "load-grunt-tasks": "^3.3.0",
     "mocha": "^2.3.2",
     "path": "^0.12.7",
