--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
   "homepage": "https://github.com/Brinkbit/fs-brinkbit-permissions#readme",
   "dependencies": {
     "brinkbit-logger": "^0.2.2",
-    "fs-s3-mongo": "git+https://github.com/Brinkbit/fs-s3-mongo.git",
+    "fs-s3-mongo": "Brinkbit/fs-s3-mongo",
     "http-server": "^0.8.5",
     "mime": "^1.3.4",
     "mongoose": "^4.3.5",
-    "brinkbit-mongodb": "git+https://github.com/Brinkbit/brinkbit-mongodb"
+    "brinkbit-mongodb": "Brinkbit/brinkbit-mongodb"
   },
   "pre-commit": [
     "eslint-pre-commit"
